--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="main-menu">
     <nav class="navbar navbar-expand-lg navbar- bg-">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/imp.jpg" alt=""></a>
+            <h1 class="navbar-brand" href="#">Piyush Sinha</h1>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
