--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="site-button">
     <div class="d-flex flex-row flex-wrap">
       <button type="button" class="btn">Hire Me</button>
-      <button type="button" class="btn-cn ">Contact Me</button>
+        <button type="button" class="btn-cn "><a href="tel:+917990556124">Contact Me</a></button>
     </div>
     </div>
   </div>
