--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <div class="main-menu">
     <nav class="navbar navbar-expand-lg navbar">
         <div class="container-fluid">
-         <a class="logo" href="#"><h1 class="navbar-brand">Piyush Sinha</h1></a>
+         <a class="logo" href="index.html"><h1 class="navbar-brand">Piyush Sinha</h1></a>
          
           <!-- <div class="collapse navbar-collapse" id="navbarNav"> -->
              <div class="mr-auto"></div>
              <div class="bar">
-             <a href="" class="">Home</a>  
-             <a href="" class="">About </a>
+             <a href="index.html" class="">Home</a>  
+             <a href="about.html" class="">About </a>
              <a href="" class="">Portfolio</a>  
              <a href="" class="">Services</a>  
              <a href="" class="">Contact </a>  
@@ -40,19 +40,19 @@
 <section class="mydata">
 <div class="container">
 <div class="row">
-  <div class="col-lg-6 col-md-12">
+  <div class="col-lg-6">
     <h3 class="title-text">Hello</h3>
     <h1 class="title-text1 text-uppercase">I am Piyush Sinha</h1>
     <h4 class="title-text2 text-uppercase">   A Web Devloper & Editor</h4>
     <div class="site-button">
     <div class="d-flex flex-row flex-wrap">
       <button type="button" class="btn">Hire Me</button>
-        <button type="button" class="btn-cn "><a href="tel:+917990556124">Contact Me</a></button>
+      <button type="button" class="btn-cn "><a href="tel:+917990556124" class="">Contact Me</a></button>
     </div>
     </div>
   </div>
-  <div class="col-lg-6 col-md-12">
-    <img src="img/banner.png" alt="">
+  <div class="col-lg-6">
+    <img class="bann" src="img/banner.png" alt="">
   </div>
 </div>
 </div>
