--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <div class="site-button">
     <div class="d-flex flex-row flex-wrap">
       <button type="button" class="btn">Hire Me</button>
-      <button type="button" class="btn-cn "><a href="tel:+917990556124" class="">Contact Me</a></button>
+      <button type="button" class="btn-cn"><a href="tel:+917990556124" class="contactme">Contact Me</a></button>
     </div>
     </div>
   </div>
