--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h4 class="title-text2 text-uppercase">   A Web Devloper & Editor</h4>
     <div class="site-button">
     <div class="d-flex flex-row flex-wrap">
-      <button type="button" class="btn">Hire Me</button>
+      <button type="button" class="btn"><a href = "mailto: sinhapiyush017@gmail.com">Hire Me</a></button>
       <button type="button" class="btn-cn "><a href="tel:+917990556124" class="">Contact Me</a></button>
     </div>
     </div>
